--- a/fastfetch/settings.jsonc
+++ b/fastfetch/settings.jsonc
@@ -9,7 +9,7 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "source": "C:/ProgramData/.config/fastfetch/ascii.txt",
+        "source": "~/.config/fastfetch//ascii.txt",
         "padding": {        
             "top": 4,
             "right": 6
